src/components/Progressbar/Progressbar.scss
@import "../Colors.scss";

.progress {
    padding: 8px;
    width: 100%;

    position: relative;
    overflow: hidden;
}

.progress-label {
    margin-bottom: 4px;
}

.progress-track {
    background-color: $color-light-grey;
    height: 2px;
    position: absolute;
    width: 100%;
}

.progress-track-fill {
    background-color: $color-primary;
    height: 2px;
    width: 100%;
}

.progress-indeterminate {
    animation: 3s ease 0s infinite normal none running progress-interminate-animation;
    background: linear-gradient(to right, $color-light-grey 0%, $color-primary 50%, $color-light-grey 100%);
    height: 2px;
    min-width: 33%;
    transition: width 0.3s ease 0s;
    width: 0px;
}

@keyframes progress-interminate-animation {
    0% {
        margin-left: -30%;
        left: -30%;
    }

    100% {
        left: 100%;
        margin-left: 100%;
    }
}

